--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="छपरीबंद सुजल रवी  - डेमो मतदान यंत्र" />
     <meta property="og:description" content="रावेर नगर परिषद पंचवार्षिक निवडणूक 2025" />
-    <meta property="og:url" content="https://anil-chabildas-chaudhary.web.app/" />
+    <meta property="og:url" content="https://chpariband-sujal-ravi.web.app/" />
     <meta property="og:image" content="./assets/img/meta-anil.jpg" />
     <title>छपरीबंद सुजल रवी  - डेमो मतदान यंत्र</title>
     <link rel="icon" href="./assets/img/ballot.jpg">
